@@ -79,7 +79,7 @@ void XPROGTarget_EnableTargetTPI(void)
 	DDRD &= ~(1 << 2);
 
 	/* Set up the synchronous USART for TINY communications - 8 data bits, even parity, 2 stop bits */
-	UBRR1  = (F_CPU / XPROG_HARDWARE_SPEED);
+	UBRR1  = ((F_CPU / 2 / XPROG_HARDWARE_SPEED) - 1);
 	UCSR1B = (1 << TXEN1);
 	UCSR1C = (1 << UMSEL10) | (1 << UPM11) | (1 << USBS1) | (1 << UCSZ11) | (1 << UCSZ10) | (1 << UCPOL1);
 
